<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <ImageView
            android:id="@+id/iv_setting_head"
            android:src="@drawable/icon_large"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:contentDescription="@null"/>

    <TextView
            android:id="@+id/tv_setting_name"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/iv_setting_head"
            android:padding="20dp"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_setting_collection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_name"
            android:textSize="16sp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:text="@string/collection"/>

    <View
            android:id="@+id/view_setting_one"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_collection"
            android:background="@color/floatButton"
            android:layout_marginStart="20dp"
            android:layout_height="0.5dp"/>

    <TextView
            android:id="@+id/tv_setting_version"
            android:text="@string/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_collection"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="20dp"/>

    <View
            android:id="@+id/view_setting_two"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_version"
            android:layout_marginStart="20dp"
            android:background="@color/floatButton"
            android:layout_height="0.5dp"/>

    <TextView
            android:id="@+id/tv_setting_version_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_collection"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:padding="20dp"/>

    <TextView
            android:id="@+id/tv_setting_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_setting_version"
            android:textSize="16sp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:text="@string/about"/>

    <TextView
            android:id="@+id/tv_setting_quit"
            android:textSize="16sp"
            android:text="@string/quit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>